<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_workshop_library_install"
        android:title="@string/workshop_library_install"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_workshop_library_check_update"
        android:title="@string/workshop_library_check_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_workshop_library_share"
        android:title="@string/workshop_library_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_workshop_library_delete"
        android:title="@string/workshop_library_delete"
        app:showAsAction="never" />
</menu>
